# simple_page

./: Cargo.toml  README.md  Rocket.toml
sample_data/: index.html
sample_data/articles/: test.md
sample_data/articles/sample_dir/: another_test.md
sample_data/static/: default.css  embed_html.js  head.html  highlight.js  nav.html  process_latex.js
sample_data/template/: article.html  dir.html  misc.html
src/: lib.rs  main.rs  types.rs
