[package]
name = "simple_page"
version = "0.1.0"
authors = ["Gu Junhua <jhgu@nao.cas.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
actix-files = "0.1.7"
pulldown-cmark = "0.6.1"
handlebars = "2.0.2"
serde_json = "1.0.42"
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.7.1"